mongo-persistent-volume/client-mongo-per-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-per-express-service
spec:
  selector:
    app: mongo-per-express
  #type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
      #nodePort: 30001
