mongo-persistent-volume/mongo-per-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-per-service
spec:
  selector:
    app: mongo-per
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
