mongo-persistent-volume/client-mongo-per-express-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-per-webapp
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "mongo.express.persistent.volume.local.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-per-express-service
                port:
                  number: 8080
